<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.aishahansari.lifeshare.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:label="@string/home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />


        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.aishahansari.lifeshare.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.aishahansari.lifeshare.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_signin"
        android:name="com.aishahansari.lifeshare.ui.signin.SignIn"
        android:label=""
        tools:layout="@layout/sign_in_fragment" />
    <fragment
        android:id="@+id/nav_signup"
        android:name="com.aishahansari.lifeshare.ui.signup.SignUp"
        android:label=""
        tools:layout="@layout/sign_up_fragment" />

    <fragment
        android:id="@+id/nav_info"
        android:name="com.aishahansari.lifeshare.ui.learnaboutblood.LearnAboutBlood"
        android:label=""
        tools:layout="@layout/learn_about_blood_fragment" />

</navigation>